# llivkit_project

./: .env  db.sqlite3  manage.py  package-lock.json  package.json  pyproject.toml  requirements.txt
livekit-vite/: package.json
livekit_project/: asgi.py  settings.py  urls.py  wsgi.py
videocall/: urls.py  views.py
videocall/static/js/: livekit-client.umd.min.js
videocall/templates/videocall/: video.html
